--- a/analises/analise-lotofacil.ipynb
+++ b/analises/analise-lotofacil.ipynb
@@ -40,7 +40,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mekyl\\Documents\\GitHub\\lotofacil\n"
+      "/home/mario/Documentos/Projetos/loteria/lotofacil\n"
      ]
     }
    ],
@@ -61,28 +61,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "        <script type=\"text/javascript\">\n",
-       "        window.PlotlyConfig = {MathJaxConfig: 'local'};\n",
-       "        if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}\n",
-       "        if (typeof require !== 'undefined') {\n",
-       "        require.undef(\"plotly\");\n",
-       "        requirejs.config({\n",
-       "            paths: {\n",
-       "                'plotly': ['https://cdn.plot.ly/plotly-latest.min']\n",
-       "            }\n",
-       "        });\n",
-       "        require(['plotly'], function(Plotly) {\n",
-       "            window._Plotly = Plotly;\n",
-       "        });\n",
-       "        }\n",
-       "        </script>\n",
-       "        "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'statsmodels'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Ignorar avisos do Arima\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwarnings\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mstatsmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtools\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msm_exceptions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ConvergenceWarning, ValueWarning  \n\u001b[1;32m      4\u001b[0m warnings\u001b[38;5;241m.\u001b[39msimplefilter(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m'\u001b[39m, ConvergenceWarning)\n\u001b[1;32m      5\u001b[0m warnings\u001b[38;5;241m.\u001b[39msimplefilter(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m'\u001b[39m, ValueWarning)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'statsmodels'"
+     ]
     }
    ],
    "source": [
@@ -205,7 +192,19 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dados_indice' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Criando a base de dados\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m base \u001b[38;5;241m=\u001b[39m \u001b[43mdados_indice\u001b[49m()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dados_indice' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Criando a base de dados\n",
     "base = dados_indice()"
@@ -217,23 +216,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1989 entries, 0 to 1988\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column        Non-Null Count  Dtype \n",
-      "---  ------        --------------  ----- \n",
-      " 0   Concurso      1989 non-null   int64 \n",
-      " 1   Indice        1989 non-null   int64 \n",
-      " 2   Data Sorteio  1989 non-null   object\n",
-      " 3   Ganhou        1989 non-null   int64 \n",
-      " 4   Dia           1989 non-null   object\n",
-      " 5   Mes           1989 non-null   object\n",
-      " 6   Ano           1989 non-null   object\n",
-      "dtypes: int64(3), object(4)\n",
-      "memory usage: 108.9+ KB\n"
+     "ename": "NameError",
+     "evalue": "name 'base' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Mostra as informações da base de dados\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mbase\u001b[49m\u001b[38;5;241m.\u001b[39minfo()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'base' is not defined"
      ]
     }
    ],
@@ -246,7 +236,19 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'base' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Converte para o tipo data\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m base[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mData Sorteio\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mbase\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mData Sorteio\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mapply(\u001b[38;5;28;01mlambda\u001b[39;00m _: datetime\u001b[38;5;241m.\u001b[39mstrptime(_, \u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mm/\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mY\u001b[39m\u001b[38;5;124m'\u001b[39m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'base' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Converte para o tipo data\n",
     "base['Data Sorteio'] = base['Data Sorteio'].apply(lambda _: datetime.strptime(_, '%d/%m/%Y'))"
@@ -258,21 +260,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Concurso                 int64\n",
-       "Indice                   int64\n",
-       "Data Sorteio    datetime64[ns]\n",
-       "Ganhou                   int64\n",
-       "Dia                     object\n",
-       "Mes                     object\n",
-       "Ano                     object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'base' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Visualizando os tipos dos dados\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mbase\u001b[49m\u001b[38;5;241m.\u001b[39mdtypes\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'base' is not defined"
+     ]
     }
    ],
    "source": [
@@ -286,102 +282,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Concurso</th>\n",
-       "      <th>Indice</th>\n",
-       "      <th>Data Sorteio</th>\n",
-       "      <th>Ganhou</th>\n",
-       "      <th>Dia</th>\n",
-       "      <th>Mes</th>\n",
-       "      <th>Ano</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2320459</td>\n",
-       "      <td>2003-09-29</td>\n",
-       "      <td>5</td>\n",
-       "      <td>29</td>\n",
-       "      <td>09</td>\n",
-       "      <td>2003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1672791</td>\n",
-       "      <td>2003-10-06</td>\n",
-       "      <td>1</td>\n",
-       "      <td>06</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1768501</td>\n",
-       "      <td>2003-10-13</td>\n",
-       "      <td>2</td>\n",
-       "      <td>13</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>797916</td>\n",
-       "      <td>2003-10-20</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>927593</td>\n",
-       "      <td>2003-10-27</td>\n",
-       "      <td>2</td>\n",
-       "      <td>27</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2003</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Concurso   Indice Data Sorteio  Ganhou Dia Mes   Ano\n",
-       "0         1  2320459   2003-09-29       5  29  09  2003\n",
-       "1         2  1672791   2003-10-06       1  06  10  2003\n",
-       "2         3  1768501   2003-10-13       2  13  10  2003\n",
-       "3         4   797916   2003-10-20       1  20  10  2003\n",
-       "4         5   927593   2003-10-27       2  27  10  2003"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'base' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Visualiza as 5 primeiras linhas\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mbase\u001b[49m\u001b[38;5;241m.\u001b[39mhead()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'base' is not defined"
+     ]
     }
    ],
    "source": [
@@ -397,33 +306,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Ano\n",
-       "2003     14\n",
-       "2004     52\n",
-       "2005     52\n",
-       "2006     63\n",
-       "2007    104\n",
-       "2008    103\n",
-       "2009    104\n",
-       "2010    104\n",
-       "2011    104\n",
-       "2012    149\n",
-       "2013    151\n",
-       "2014    152\n",
-       "2015    152\n",
-       "2016    151\n",
-       "2017    150\n",
-       "2018    152\n",
-       "2019    153\n",
-       "2020     79\n",
-       "Name: Concurso, dtype: int64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'base' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Quantidade de concursos por ano\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m concursos_ano \u001b[38;5;241m=\u001b[39m \u001b[43mbase\u001b[49m\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAno\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mConcurso\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mcount()\n\u001b[1;32m      3\u001b[0m concursos_ano\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'base' is not defined"
+     ]
     }
    ],
    "source": [
@@ -438,33 +329,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Ano\n",
-       "2003     33\n",
-       "2004    219\n",
-       "2005    224\n",
-       "2006    294\n",
-       "2007    334\n",
-       "2008    472\n",
-       "2009    412\n",
-       "2010    389\n",
-       "2011    419\n",
-       "2012    814\n",
-       "2013    692\n",
-       "2014    688\n",
-       "2015    508\n",
-       "2016    486\n",
-       "2017    506\n",
-       "2018    547\n",
-       "2019    614\n",
-       "2020    271\n",
-       "Name: Ganhou, dtype: int64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'base' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Quantidade de ganhadores por ano\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m ganhadores \u001b[38;5;241m=\u001b[39m \u001b[43mbase\u001b[49m\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAno\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGanhou\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39msum()\n\u001b[1;32m      3\u001b[0m ganhadores\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'base' is not defined"
+     ]
     }
    ],
    "source": [
@@ -477,7 +350,19 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'concursos_ano' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m x_concursos \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      3\u001b[0m y_concursos \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mdict\u001b[39m(\u001b[43mconcursos_ano\u001b[49m)\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m      6\u001b[0m     x_concursos\u001b[38;5;241m.\u001b[39mappend(k)\n\u001b[1;32m      7\u001b[0m     y_concursos\u001b[38;5;241m.\u001b[39mappend(v)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'concursos_ano' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Definindo os dados para analisar a quantidade de concursos por ano\n",
     "x_concursos = []\n",
@@ -492,7 +377,19 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ganhadores' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m x_ganhadores \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      3\u001b[0m y_ganhadores \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mdict\u001b[39m(\u001b[43mganhadores\u001b[49m)\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m      6\u001b[0m     x_ganhadores\u001b[38;5;241m.\u001b[39mappend(k)\n\u001b[1;32m      7\u001b[0m     y_ganhadores\u001b[38;5;241m.\u001b[39mappend(v)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ganhadores' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Definindo os dados para analisar a quantidade de ganhadores por ano\n",
     "x_ganhadores = []\n",
@@ -2388,9 +2285,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4327,7 +4222,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4341,7 +4236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
